--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,20 @@ body{
 main{
     width: 90%;
     margin:auto;
+    margin-bottom: 25px;
 }
 nav{
     width: 100%;
     min-height: 50px;
     background-color: #8f0413;
     color:white;
+    transition: height 0.2s;
+    transition-delay: 0.2s;
 }
 nav>div{
     display: flex;
     flex-flow: row wrap;
+    overflow: auto;
     justify-content:space-around;
     
 }
@@ -36,6 +40,13 @@ button{
     border:none;
     color:white;
     font-size: 100%;
+}
+footer{
+    background-color: #8f0413;
+    color:#836339;
+}
+footer>*{
+    margin: 0;
 }
 header{
     background-color: #1b5e38;
@@ -123,6 +134,17 @@ nav>div>p>a:hover{
         height: 0;
         flex-flow:column wrap;
         display:none;
+        padding-bottom: 5px;
+    }
+    nav>div>p{
+        padding:5px;
+        border-bottom: #1b5e38 1px solid;
+        width: calc(98% - 10px);
+        margin-left:5px;
+        font-size: large;
+    }
+    nav>div #jelenlegi{
+        text-decoration: none;
     }
     .flex{
         flex-flow: column;
@@ -136,7 +158,7 @@ nav>div>p>a:hover{
     button{
         display:block;
         height: 50px;
-        width:50px;
+        width:100%;
     }
 }
 @media screen and (max-width:762px){
