--- a/css/style.css
+++ b/css/style.css
@@ -121,9 +121,39 @@ nav>div>p>a:hover{
 .imageover:hover div{
     background-color: rgba(0, 0, 0, 0.75);
 }
+.a1, .a2, .a3, .a4, .a5{
+    display:none;
+    opacity:0%;
+    transition: opacity 0.3s;
+}
 #jelenlegi{
     text-decoration: underline;
     color:#836339;
+}
+ul>li {
+    list-style: none;
+    vertical-align: middle;
+}
+ul>li::before {
+    content: '';
+    display: inline-block;
+    height: 15px;
+    width: 15px;
+    background-size: cover;
+    background-image: url('../img/poni.png');
+}
+span>i{
+    float:right;
+    transition: transform 0.2s;
+    cursor: pointer;
+}
+hr{
+    background-color:#8f0413;
+    color:#8f0413;
+}
+span{
+    font-size:larger;
+    font-weight: bold;
 }
 @media screen and (max-width:679px){
     header img{
