--- a/css/style.css
+++ b/css/style.css
@@ -213,8 +213,8 @@ span{
     width: 25%;
     margin-top: 50px;
     min-width: 300px;
-    background-color: #8f0413;
+    background-color: #1b5e38;
     padding: 10px;
     border-radius: 15px;
-    color:black;
+    color:white;
 }
